# redbeanpython

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: sonarcloud.yml  test_mysql.yml  test_postgres.yml  test_sqlite.yml
docs/: beans.md  bulk_operations.md  changelog.md  connection.md  conventions.md  crud.md  custom_configuration.md  finding.md  fluid_frozen.md  hybrid_mode.md  index.md  install.md  joined_load.md  licence.md  migration_to_sqlalchemy.md  performance.md  quick_tour.md  roadmap.md  supported_versions.md  tools.md  types.md
examples/quick_tour/: quick_tour.py
redbeanpython/: __init__.py  config.py  const.py  errors.py  facade.py  redbean.py
redbeanpython/bean/: bean.py  beans.py  id.py  validator.py
redbeanpython/cli/: cli.py
redbeanpython/model/: model.py  models_creator.py
redbeanpython/structure/: column_type.py  db_structure.py  supported_types.py  table.py  type.py
redbeanpython/templates/: alembic.ini.mako  env.py.template  env.sqlite.py.template  model.py.mako
site/: 404.html  index.html  sitemap.xml
site/beans/: index.html
site/bulk_operations/: index.html
site/changelog/: index.html
site/connection/: index.html
site/conventions/: index.html
site/crud/: index.html
site/custom_configuration/: index.html
site/finding/: index.html
site/fluid_frozen/: index.html
site/hybrid_mode/: index.html
site/install/: index.html
site/joined_load/: index.html
site/licence/: index.html
site/migration_to_sqlalchemy/: index.html
site/overrides/partials/: header.html
site/performance/: index.html
site/quick_tour/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/supported_versions/: index.html
site/tools/: index.html
site/types/: index.html
tests/: abstract.py  conftest.py  pyproject.toml  run_compatibility_tests.py  run_dev_tests.sh  utils.py
tests/bean/: abstract.py  equality_test.py  operations_test.py  validation_test.py
tests/cli/: abstract.py  clear_models_test.py  nuke_test.py
tests/docker/: Dockerfile  docker-compose.yml
tests/facade/: abstract.py  count_test.py  delete_test.py  dispense_test.py  engine_test.py  exists_test.py  find_test.py  load_test.py  setup_test.py  store_test.py
tests/model_creator/: abstract.py  columns_test.py  tables_test.py
tests/redbean/: abstract.py  base_test.py  count_test.py  create_test.py  creating_from_database_test.py  delete_test.py  dispense_test.py  exists_test.py  find_test.py  persist_types_test.py  redbean_type_enforcing_test.py  redbean_update_test.py  setup_test.py  validation_test.py  via_model_test.py
tests/resources/migrations/create_structure_on_freeze_test/migrations/: env.py
tests/resources/migrations/create_structure_on_freeze_test/migrations/versions/: 2693870e9f5c4d4c9f6096468847bf9e_.py
tests/resources/migrations/create_structure_on_freeze_test/models/: abcd.py
tests/resources/models/: all_types_model.txt  name_model.txt  single_int_model.txt
tests/resources/models/create_structure_on_freeze_test/models/migrations/: script.py.mako
tests/resources/models/create_structure_on_freeze_test/models/migrations/versions/: 54e77f7666a24e67bb4f8ba56d9e73dd_.py  d2f91eafc4554288ac0a31bda9412534_.py
tests/resources/models/create_structure_on_freeze_test/models/models/: a.py  test.py
tests/structure/: abstract.py  column_test.py  name_test.py  type_test.py
